# hypercube-optimization

./: Cargo.toml  README.md
src/: bounds.rs  evaluation.rs  hypercube.rs  lib.rs  main.rs  objective_functions.rs  optimizer.rs  point.rs  result.rs
tests/: bounds.rs  hypercube.rs  point.rs
