[package]
name = "hypercube-optimization"
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
ordered-float = "2.10.0"
log = "0.4.16"
simple_logger = "2.1.0"

[lib]
name = "hypercube_optimizer"
path = "src/lib.rs"
